--- a/src/styles/icon.less
+++ b/src/styles/icon.less
@@ -1,8 +1,8 @@
 @font-face {
   font-family: "iconfont"; /* Project id 3691791 */
-  src: url('//at.alicdn.com/t/c/font_3691791_x91c85vnao.woff2?t=1665226278049') format('woff2'),
-       url('//at.alicdn.com/t/c/font_3691791_x91c85vnao.woff?t=1665226278049') format('woff'),
-       url('//at.alicdn.com/t/c/font_3691791_x91c85vnao.ttf?t=1665226278049') format('truetype');
+  src: url('//at.alicdn.com/t/c/font_3691791_0wh7tmknws1.woff2?t=1665551688856') format('woff2'),
+       url('//at.alicdn.com/t/c/font_3691791_0wh7tmknws1.woff?t=1665551688856') format('woff'),
+       url('//at.alicdn.com/t/c/font_3691791_0wh7tmknws1.ttf?t=1665551688856') format('truetype');
 }
 
 .iconfont {
@@ -11,6 +11,26 @@
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-gengduo:before {
+  content: "\e664";
+}
+
+.icon-shoucang:before {
+  content: "\e86d";
+}
+
+.icon-guanzhu1:before {
+  content: "\e601";
+}
+
+.icon-guanzhu:before {
+  content: "\f9e6";
+}
+
+.icon-shumashouji:before {
+  content: "\e600";
 }
 
 .icon-shipin:before {
